--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,15 @@
 #key==value
+#this file is used for project configuration
+#here , we spscify browser type for all tests
+#urls, connections strings , credentials
 browser=chrome
+qa1=http://qa1.vytrack.com
+color=red
+
+#Credentials
+store_manager=storemanager85
+driver=user19
+password=UserUser123
 
 
 
